feat(releases): add delete button, improve stats tiles, and fix iOS OTA install
- Added delete release button with confirmation dialog to ReleaseCard
- Restructured release stats to show Profile/Certificate tiles for iOS
- Fixed iOS OTA install link generation with tunnel support (env vars)
- Added shadcn alert-dialog component
- Fixed build errors in OTA token generation calls

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,32 @@ NEXTAUTH_URL="http://localhost:3000"
 SUPER_ADMIN_EMAILS=""
 
 # ============================================================
+# iOS OTA / HTTPS TUNNEL (local device testing only)
+# ============================================================
+# iOS requires HTTPS with a valid TLS certificate for OTA app installs.
+# When testing on a real device from a local dev server, expose port 3000
+# through a tunnel and set these two variables to the tunnel's HTTPS URL.
+#
+# In production (Docker + Caddy), leave these UNSET — Caddy handles HTTPS
+# automatically and the correct public URL is derived from the request.
+#
+# Option A — Cloudflare Tunnel (free, no account needed):
+# brew install cloudflare/cloudflare/cloudflared
+# cloudflared tunnel --url http://localhost:3000
+# → copies the printed https://*.trycloudflare.com URL below
+#
+# Option B — ngrok (free tier, requires free account at ngrok.com):
+# brew install ngrok/ngrok/ngrok && ngrok config add-authtoken <token>
+# ngrok http 3000
+# → copies the printed https://*.ngrok-free.app URL below
+#
+# NEXT_PUBLIC_APP_URL is used by the client-side install button.
+# APP_URL is used by the server-side manifest endpoint.
+# Both must be set to the same tunnel URL.
+# NEXT_PUBLIC_APP_URL=https://your-tunnel-url
+# APP_URL=https://your-tunnel-url
+
+# ============================================================
 # REDIS (optional — enables background job processing)
 # ============================================================
 # When set, release binary parsing and notifications run asynchronously
