feat(gcp): add enterprise storage mode, install-link API, and compliance docs/workflow

--- a/.env.example
+++ b/.env.example
@@ -58,7 +58,7 @@ SUPER_ADMIN_EMAILS=""
 # ============================================================
 # STORAGE
 # ============================================================
-# Supported providers: local, aws-s3, gcp-storage, azure-blob
+# Supported providers: local, aws-s3, gcp-storage, gcp-enterprise, azure-blob
 STORAGE_PROVIDER=local
 
 # --- Local (default, no extra config needed) ---
@@ -74,6 +74,17 @@ LOCAL_STORAGE_PATH=./data/uploads
 # GCS_KEY_FILE=/path/to/service-account-key.json
 # Option B: paste the entire service account JSON as a single-line string
 #           (recommended for CI and cloud deployments — no file needed)
+# GCS_CREDENTIALS={"type":"service_account","project_id":"...","private_key":"...","client_email":"..."}
+
+# --- Enterprise GCP dual-bucket mode (Cloud Run + external dist bucket) ---
+# STORAGE_PROVIDER=gcp-enterprise
+# GCS_PROJECT_ID=your-gcp-project-id
+# GCS_APP_BUCKET=deploymate-app-prod
+# GCS_DISTRIBUTION_BUCKET=deploymate-dist-prod
+# DISTRIBUTION_BASE_URL=https://deploymate.example.com
+#
+# Authentication options are the same as gcp-storage:
+# GCS_KEY_FILE=/path/to/service-account-key.json
 # GCS_CREDENTIALS={"type":"service_account","project_id":"...","private_key":"...","client_email":"..."}
 
 # --- AWS S3 (or any S3-compatible provider e.g. MinIO, Cloudflare R2) ---
