--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,3 +129,67 @@ jobs:
 
       - run: pnpm audit --audit-level=high
         continue-on-error: true
+
+  quality:
+    name: Legacy/Slop Quality Scan (Warn Mode)
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: latest
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: pnpm
+
+      - run: pnpm install --frozen-lockfile
+
+      - name: Initialize report folder
+        run: mkdir -p .reports
+
+      - name: Unused code/dependency scan (knip)
+        run: pnpm quality:unused | tee .reports/knip.txt
+        continue-on-error: true
+
+      - name: Duplication scan (jscpd)
+        run: pnpm quality:dup | tee .reports/jscpd.txt
+        continue-on-error: true
+
+      - name: Dependency graph scan (dependency-cruiser)
+        run: pnpm quality:deps | tee .reports/dependency-cruiser.txt
+        continue-on-error: true
+
+      - name: Static analysis scan (semgrep)
+        run: pnpm quality:semgrep
+        continue-on-error: true
+
+      - name: Coverage threshold scan (c8)
+        run: pnpm quality:coverage | tee .reports/coverage.txt
+        continue-on-error: true
+
+      - name: Publish scan summary
+        if: always()
+        run: |
+          {
+            echo "## Legacy/Slop Quality Scan (Warn Mode)"
+            echo
+            echo "This job is currently non-blocking. Use it to establish baseline and remove noise before enforcing as required checks."
+            echo
+            echo "Reports are attached as workflow artifacts:"
+            echo "- knip (unused code/deps)"
+            echo "- jscpd (duplication)"
+            echo "- dependency-cruiser (dependency cycles)"
+            echo "- semgrep (static security/code findings)"
+            echo "- c8 (coverage thresholds)"
+          } >> "$GITHUB_STEP_SUMMARY"
+
+      - name: Upload quality artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: quality-artifacts
+          path: .reports
